# mcp-workshop

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
src/mcp_workshop/: __init__.py  server.py
src/mcp_workshop/tools/: __init__.py  definitions.py  greetings.py  inventory.py  math_tools.py
tests/: test_server.py
